added copySpace
